hphp/hack/test/typecheck/shape/shape_put_wrong_arg2.php.exp
ERROR: File "shape_put_wrong_arg2.php", line 4, characters 30-36:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
