hphp/hack/test/typecheck/shape/shape_put_wrong_arg2.php
<?hh

function test(shape() $shape): shape() {
  return Shapes::put($shape, 'x'.'y', 'test');
}
